; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_main.c_draw_signs.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_main.c_draw_signs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@GL_POLYGON_OFFSET_FILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_signs(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %5 = load i32, i32* @GL_POLYGON_OFFSET_FILL, align 4
  %6 = call i32 @glEnable(i32 %5)
  %7 = call i32 @glPolygonOffset(i32 -8, i32 -1024)
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = mul nsw i32 %14, 6
  %16 = call i32 @draw_triangles_3d_text(i32* %8, i32 %11, i32 %15)
  %17 = load i32, i32* @GL_POLYGON_OFFSET_FILL, align 4
  %18 = call i32 @glDisable(i32 %17)
  ret void
}

declare dso_local i32 @glEnable(i32) #1

declare dso_local i32 @glPolygonOffset(i32, i32) #1

declare dso_local i32 @draw_triangles_3d_text(i32*, i32, i32) #1

declare dso_local i32 @glDisable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
